--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #003580;
+    background-color: #0b0275;
     color: white;
     display: flex;
     justify-content: center;
@@ -39,7 +39,7 @@
   }
   
   .headerBtn {
-    background-color: #0071c2;
+    background-color: #239481;
     color: white;
     font-weight: 500;
     border: none;
